src/snapshots/saltnitor__ui__tests__gpu_inspector.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "┌ Fixture GPU 12GB Architecture ─────────────────┐┌ Active VRAM Processes ─────────────────────────┐",
        "│ Core Temp:  55             °C Fan Speed:  30%% ││    4242 operator llama-server      8.8G   5.7G │",
        "│ Power Draw: 120W            Clocks:     1800 MH││                                                │",
        "│[GPU Core Compute]             40%%             ││                                                │",
        "│[VRAM Allocation ] █████████████54%             ││                                                │",
        "│                                                ││                                                │",
        "└────────────────────────────────────────────────┘└[Up/Dn] Target | [x] Term | [X] Kill────────────┘",
        "┌ Intelligent Log Analyzer ────────────────────────────────────────── [Port: Port 8080: LISTENING] ┐",
        "│   router started                                                                                 │",
        "│   model A_STD loaded                                                                             │",
        "│>> request served                                                                                 │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "┌ API Interrogator ────────────────────────────────────────────────────────────────[Target: A_STD] ┐",
        "│> {"model": "None", "messages": [{"role": "user", "content": "ping"}]}                            │",
        "│TTFT: n/a | PP: n/a | TG: n/a Ready. Press 'i' to focus console, Enter to fire.                   │",
        "│                                                                                                  │",
        "└─────────────────────────────────────────────────────────── [Tab] Hot-Swap | [Press 'i' to focus] ┘",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                [q] Quit  | [h] Help Menu  | [t] Deep Tuner  | [Esc] Close / Unfocus              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: LightBlue, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Reset, bg: LightBlue, underline: Reset, modifier: NONE,
        x: 36, y: 4, fg: LightBlue, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 99, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 97, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 24, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 24, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 70, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
