src/snapshots/saltnitor__ui__tests__help.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "┌ Fixture GPU 12GB VRAM Saturatio 6.50 / 12.0 GB ┐┌ Fixture CPU 8-Core (Current Load: 93%) ────────┐",
        "│████████████████████████ █                      ││            ▂▅▇           ▂▄▆           ▁▃▆     │",
        "└────────────────────────────────────────────────┘│        ▁▄▆████       ▁▃▅████        ▂▅▇███     │",
        "┌ DDR5 System RAM Spillover ──── 12.25 / 32.0 GB ┐│     ▃▅▇███████    ▂▄▇███████    ▁▄▆███████    ▁│",
        "│████████████████┌ Saltnitor Command Manual ─────────────────────────────────────┐▅▇██████████ ▂▄▇█│",
        "└────────────────│                                                               │─────────────────┘",
        "┌ Intelligent Log│ --- Navigation & Display ---                                  │8080: LISTENING] ┐",
        "│   router starte│  [q] Quit        | [PgUp/PgDn] Scroll Logs                    │                 │",
        "│   model A_STD l│  [/] Search Logs | [Enter] Apply Search/Filter                │                 │",
        "│>> request serve│  [g] GPU Metrics | [c] CPU & RAM Metrics                      │                 │",
        "│                │                                                               │                 │",
        "│                │ --- Orchestration & Tuning ---                                │                 │",
        "│                │  [Tab] Toggle Bottom Deck (Interrogator vs Hot-Swap)          │                 │",
        "│                │  [t] Config Tuner (ngl, ctx, threads, batch, parallel)        │                 │",
        "│                │  [i] Focus Active Deck (Press Esc to cancel)                  │                 │",
        "│                │  [Up/Dn] Cycle Logs / Payloads / Sniper Targets               │                 │",
        "│                │  [x] Terminate target (SIGTERM) | [X] Kill (asks y/N)         │                 │",
        "│                │                                                               │                 │",
        "│                │ --- Daemon Control (Requires Sudo) ---                        │                 │",
        "│                │  [Shift+S] Start Daemon   | [Shift+X] Stop Daemon             │                 │",
        "│                │  [Shift+R] Restart Daemon                                     │                 │",
        "└────────────────│                                                               │─────────────────┘",
        "┌ API Interrogato│ --- Tactical Response ---                                     │─[Target: A_STD] ┐",
        "│> {"model": "Non│  [Ctrl+D] Crash Dump (Snapshot telemetry to file)             │                 │",
        "│TTFT: n/a | PP: │  [Ctrl+K] Kill-Switch (Force-kill llama-server)               │                 │",
        "│                └────────────────────────────────── Press [h] or [Esc] to close ┘                 │",
        "└─────────────────────────────────────────────────────────── [Tab] Hot-Swap | [Press 'i' to focus] ┘",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                [q] Quit  | [h] Help Menu  | [t] Deep Tuner  | [Esc] Close / Unfocus              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 1, fg: Reset, bg: Green, underline: Reset, modifier: BOLD,
        x: 26, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 49, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 17, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 99, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 49, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 57, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 22, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 44, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 97, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 24, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 24, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 25, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 25, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 25, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 25, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 70, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
