src/snapshots/saltnitor__ui__tests__too_small_80x15.snap
---
source: src/ui.rs
expression: "render(&mut fixture(), 80, 15)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 15 },
    content: [
        "┌──────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                              │",
        "│                                                                              │",
        "│                     [!] TERMINAL FOOTPRINT TOO SMALL [!]                     │",
        "│                                                                              │",
        "│                    Please expand window to at least 80x16.                   │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: BOLD | RAPID_BLINK,
    ]
}
